# foundry-demo

./: README.md  package-lock.json  package.json  pyproject.toml
script/: deploy.js  deploy.py
